[workspace]
members = ["crates/core", "crates/macros/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Bevy plugin for a simple single-line text input widget."
repository = "https://github.com/xenira/bevy_not_so_simple_text_input"
homepage = "https://github.com/xenira/bevy_not_so_simple_text_input"
documentation = "https://docs.rs/bevy_simple_text_input"
keywords = ["bevy", "gamedev", "ui", "forms", "input"]
categories = ["game-development"]
readme = "README.adoc"
exclude = [".github"]
authors = ["xenira <bevy_ui_forms@3.141.rip>"]
