[workspace]
members = ["crates/core", "crates/macros/*"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/xenira/bevy_ui_forms"
homepage = "https://github.com/xenira/bevy_ui_forms"
documentation = "https://docs.rs/bevy_ui_forms"
keywords = ["bevy", "gamedev", "ui", "forms", "input"]
categories = ["game-development"]
readme = "README.adoc"
exclude = [".github"]
authors = ["xenira <bevy_ui_forms@3.141.rip>"]
rust-version = "1.64.0"
