[package]
name = "bevy_ui_forms"
version.workspace = true
edition.workspace = true
description = "A bevy plugin for creating forms."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.adoc"
license.workspace = true
authors.workspace = true
rust-version = "1.76.0"

[dependencies]
bevy_ui_forms_form_proc = { version = "0.1.0", optional = true, path = "../macros/form_proc" }

[dependencies.bevy]
version = "0.13"
default-features = false
features = ["bevy_ui", "bevy_asset", "bevy_text"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
arboard = { version = "3.3.2", optional = true }

[target.wasm32-unknown-unknown.dependencies]
web-sys = { version = "0.3.68", optional = true, features = ["Clipboard", "Window", "Navigator", "Permissions"] }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
async-channel = { version = "2.3.0", optional = true }

[dev-dependencies.bevy]
version = "0.13"
default-features = true

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"

[features]
default = ["derive", "clipboard"]
derive = ["bevy_ui_forms_form_proc"]
clipboard = ["arboard", "web-sys", "wasm-bindgen-futures", "async-channel"]
