[package]
name = "bevy_ui_forms_form_derive"
version.workspace = true
edition.workspace = true
description = "A bevy plugin for creating forms."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.adoc"
license.workspace = true
authors.workspace = true
rust-version = "1.64.0"

[dependencies]
darling = "0.20.8"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }

[lib]
proc-macro = true

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
